Updating the responsive design

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2 class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
         <div class="container m-auto col-10">
             <div id="experience" class="container m-auto col-12 row">
-                <div class="card text-black-50 border-success bg-white  my-2 mx-auto" style="max-width: 20rem;">
+                <div class="card text-black-50 border-success bg-white  my-2 mx-auto col" style="max-width: 20rem;">
                     <div class="card-header h4 text-center">JavaScript</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -95,7 +95,7 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-white border-success bg-success my-2 mx-auto" style="max-width: 20rem;">
+                <div class="card text-white border-success bg-success my-2 mx-auto col" style="max-width: 20rem;">
                     <div class="card-header h4 text-center">HTML-5</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -103,7 +103,7 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-black-50 border-success bg-white  my-2 mx-auto" style="max-width: 20rem;">
+                <div class="card text-black-50 border-success bg-white  my-2 mx-auto col" style="max-width: 20rem;">
                     <div class="card-header h4 text-center">CSS-3</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -111,7 +111,7 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-white border-success bg-success  my-2 mx-auto" style="max-width: 20rem;">
+                <div class="card text-white border-success bg-success  my-2 mx-auto col" style="max-width: 20rem;">
                     <div class="card-header h4 text-center">Bootstrap</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
