Working on the Experience section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Nedelcho Karageorgiev</title>
     <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="css/resetCss.css">
     <link rel="stylesheet" href="css/bootstrap-Flatly.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
