--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <section class="m-auto">
         <h2 class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
         <div class="container m-auto col-10">
-            <div id="experience" class="container m-auto col-12 row">
+            <div id="experience" class="container m-auto row">
                 <div class="card text-black-50 border-success bg-white col mx-2 my-auto" style="max-width: 20rem;">
                     <div class="card-header h4 text-center">JavaScript</div>
                     <div class="card-body">
