Updating index.html file making it responsive.

--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
     <!--Experience-->
     <section class="m-auto">
         <h2 class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
-        <div class="container m-auto col-10">
-            <div id="experience" class="container m-auto row">
-                <div class="card text-black-50 border-success bg-white col mx-2 my-auto" style="max-width: 20rem;">
+        <div class="container-fluid m-auto">
+            <div id="experience" class="container mx-auto col-10 row">
+                <div class="card text-black-50 border-success bg-white p-0 m-1"
+                     style="max-width:
+                18rem;">
                     <div class="card-header h4 text-center">JavaScript</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -96,7 +98,8 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-white border-success bg-success col mx-2 my-auto" style="max-width: 20rem;">
+                <div class="card text-white border-success bg-success p-0 m-1"
+                     style="max-width: 18rem;">
                     <div class="card-header h4 text-center">HTML-5</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -104,7 +107,8 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-black-50 border-success bg-white col mx-2 my-auto" style="max-width: 20rem;">
+                <div class="card text-black-50 border-success bg-white p-0 m-1" style="max-width:
+                18rem;">
                     <div class="card-header h4 text-center">CSS-3</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -112,7 +116,8 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-white border-success bg-success col mx-2 my-auto" style="max-width: 20rem;">
+                <div class="card text-white border-success bg-success p-0 m-1" style="max-width:
+                18rem;">
                     <div class="card-header h4 text-center">Bootstrap</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
