--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <!--Experience-->
     <section class="m-auto">
         <h2 class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
-        <div class="container-fluid m-auto">
-            <div id="experience" class="container mx-auto col-10 row">
-                <div class="card text-black-50 border-success bg-white p-0 m-1"
+        <div class="container col-12 m-auto">
+            <div id="experience" class="container m-auto col-10 row">
+                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2"
                      style="max-width:
-                18rem;">
+                17rem;">
                     <div class="card-header h4 text-center">JavaScript</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -98,8 +98,8 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-white border-success bg-success p-0 m-1"
-                     style="max-width: 18rem;">
+                <div class="card text-white border-success bg-success p-0 mx-auto mb-2"
+                     style="max-width: 17rem;">
                     <div class="card-header h4 text-center">HTML-5</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -107,8 +107,8 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-black-50 border-success bg-white p-0 m-1" style="max-width:
-                18rem;">
+                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:
+                17rem;">
                     <div class="card-header h4 text-center">CSS-3</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
@@ -116,8 +116,8 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card text-white border-success bg-success p-0 m-1" style="max-width:
-                18rem;">
+                <div class="card text-white border-success bg-success p-0 mx-auto mb-2" style="max-width:
+                17rem;">
                     <div class="card-header h4 text-center">Bootstrap</div>
                     <div class="card-body">
                         <h4 class="card-title">Primary card title</h4>
