Resizing the images

--- a/index.html
+++ b/index.html
@@ -281,72 +281,72 @@
     <section class="my-5 mx-auto col-10">
         <h2 id="certificates" class="h2 mb-3 text-center">CERTIFICATES</h2>
         <div class="container col-12 w-100 m-auto text-center">
-            <img data-toggle="modal" data-target="#prBasic" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#prBasic" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/Programming-Basic.png" alt="Programming-Basic"/>
-            <img data-toggle="modal" data-target="#prFund" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#prFund" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/Programming-Fundamentals.png" alt="Programming-Fundamentals"/>
-            <img data-toggle="modal" data-target="#techMode" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#techMode" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/Tech-Module.png" alt="Tech-Module"/>
-            <img data-toggle="modal" data-target="#jsFund" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#jsFund" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/JavaScript-Fundamentals.png" alt="JavaScript-Fundamentals"/>
         </div>
         <div class="container col-12 w-100 m-auto text-center">
-            <img data-toggle="modal" data-target="#webFund" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#webFund" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/Web-Fundamentals.png" alt="Web-Fundamentals"/>
-            <img data-toggle="modal" data-target="#jsAdvance" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#jsAdvance" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/JavaScript-Advance.png" alt="JavaScript-Advance"/>
-            <img data-toggle="modal" data-target="#jsApp" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#jsApp" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/JavaScript-Application.png" alt="JavaScript-Application"/>
-            <img data-toggle="modal" data-target="#jsFrontEnd" class="my-2 mx-auto col-2"
+            <img data-toggle="modal" data-target="#jsFrontEnd" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/JavaScript-For-Front-End.png" alt="JavaScript-For-Front-End"/>
         </div>
 
         <div class="modal fade" id="prBasic" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                    <img class="h-50 w-100" src="certificates/Programming-Basic.png"/>
+            <div class="modal-dialog text-center">
+                    <img class="h-50 w-75" src="certificates/Programming-Basic.png"/>
             </div>
         </div>
         <div class="modal fade" id="prFund" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                <img class="h-50 w-100" src="certificates/Programming-Fundamentals.png"/>
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/Programming-Fundamentals.png"/>
             </div>
         </div>
         <div class="modal fade" id="techMode" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                <img class="h-50 w-100" src="certificates/Tech-Module.png"/>
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/Tech-Module.png"/>
             </div>
         </div>
         <div class="modal fade" id="jsFund" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                <img class="h-50 w-100" src="certificates/JavaScript-Fundamentals.png"/>
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/JavaScript-Fundamentals.png"/>
             </div>
         </div>
         <div class="modal fade" id="webFund" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                <img class="h-50 w-100" src="certificates/Web-Fundamentals.png"/>
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/Web-Fundamentals.png"/>
             </div>
         </div>
         <div class="modal fade" id="jsAdvance" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                <img class="h-50 w-100" src="certificates/JavaScript-Advance.png"/>
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/JavaScript-Advance.png"/>
             </div>
         </div>
         <div class="modal fade" id="jsApp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                <img class="h-50 w-100" src="certificates/JavaScript-Application.png"/>
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/JavaScript-Application.png"/>
             </div>
         </div>
         <div class="modal fade" id="jsFrontEnd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog">
-                <img class="h-50 w-100" src="certificates/JavaScript-For-Front-End.png"/>
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/JavaScript-For-Front-End.png"/>
             </div>
         </div>
     </section>
