Further resizing of the certificates

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     </section>
     <!--Experience-->
     <section class="m-auto">
-        <h2 class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
+        <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
         <div class="container col-12 m-auto">
-            <div id="experience" class="container m-auto col-10 row">
+            <div class="container m-auto col-10 row">
                 <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2"
                      style="max-width:
                 17rem;">
@@ -128,10 +128,10 @@
             </div>
         </div>
     </section>
-    <!--ProgressBar-->
+    <!--Skills-->
     <section class="mx-auto my-5">
-        <h2 class="h2 text-center">SKILLS</h2>
-        <div id="skills" class="container col-10 my-2">
+        <h2 id="skills" class="h2 text-center">SKILLS</h2>
+        <div class="container col-10 my-2">
             <h4 class="h4 text-left">
                 JS-React
             </h4>
@@ -259,8 +259,8 @@
     </section>
     <!--Education-->
     <section>
-        <h2 class="h2 mb-3 text-center">EDUCATION</h2>
-        <div id="education" class="container row m-auto">
+        <h2 id="education" class="h2 mb-3 text-center">EDUCATION</h2>
+        <div class="container row m-auto">
             <blockquote class="blockquote col my-2 mx-auto">
                 <h4 class="h4">Software University Sofia (SoftUni)</h4>
                 <p class="mb-0 text-success">JavaScript Web Development.</p>
