Adding personal's info text file

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 <main>
     <!--About-->
     <section class="container text-center mt-5 mb-5">
-        <div id="about" class="container text-center w-10">
-            <img src="images/nedelchoKarageorgiev.jpg" alt="Nedelcho Karageorgiev"
-                 class="rounded-circle w-25"/>
+        <div id="about" class="container text-center w-75">
+            <img src="images/nedelcho.jpg" alt="Nedelcho Karageorgiev"
+                 class="rounded" style="width: 30%"/>
         </div>
         <h1 class="h1 pt-3">
             Nedelcho Karageorgiev
@@ -71,17 +71,13 @@
         </p>
         <hr>
         <p>
-            About Me:
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores blanditiis corporis est expedita
-            necessitatibus nemo quae! Cum ipsa libero maxime provident quisquam reprehenderit! Adipisci at dolorem error
-            laudantium quis rerum?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At debitis, eos facilis, fugit id illo magnam
-            perspiciatis quibusdam ratione reiciendis repudiandae rerum, tempora voluptate? Cupiditate impedit placeat
-            temporibus ullam voluptas.
+            Hello, thank you for taking time watching my CV, my name is Nedelcho. I am a student at Software University
+            Sofia who seek to join in a team of professionals and taste the real experience of being into programming on
+            the market. So far, my primary focus was to learn to write clean, elegant and efficient code. I am
+            proficient
+            in JavaScript, HTML, CSS, Bootstrap. Since the summer of 2017 I have been writing code in Javascript and
+            learning from one of the best lecturers in the country.
         </p>
-        <button class="btn btn-outline-success">
-            Get my CV
-        </button>
     </section>
     <!--Experience-->
     <section class="m-auto">
@@ -93,36 +89,42 @@
                 17rem;">
                     <div class="card-header h4 text-center">JavaScript</div>
                     <div class="card-body">
-                        <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h4 class="card-title">SoftWare University</h4>
+                        <p class="card-text">After hundreds of exercises written on JavaScript I can truly say that, JS
+                            is the programming language which inspires me to go deeply into the web development. Up to
+                            now, I become familiar with many programming patterns and libraries as: JQuery, Sammy.js,
+                            Babel, AJAX, asynchronous programming, promises, creating simple SPA Application using
+                            routing libraries and so on.</p>
                     </div>
                 </div>
                 <div class="card text-white border-success bg-success p-0 mx-auto mb-2"
                      style="max-width: 17rem;">
                     <div class="card-header h4 text-center">HTML-5</div>
                     <div class="card-body">
-                        <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h4 class="card-title">SoftWare University</h4>
+                        <p class="card-text">I have learned the basis of HTML in the beginning of
+                            my study in SoftUni. Since then, I am improving my knowledge everyday, aiming to write a
+                            well
+                            ordered and semantic code.</p>
                     </div>
                 </div>
                 <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:
                 17rem;">
                     <div class="card-header h4 text-center">CSS-3</div>
                     <div class="card-body">
-                        <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h4 class="card-title">SoftWare University</h4>
+                        <p class="card-text">CSS has enormous potential. I have developed my skills in a way which gives
+                            me the opportunity to use it freely for making the layout of the web pages looking well and
+                            elegant.</p>
                     </div>
                 </div>
                 <div class="card text-white border-success bg-success p-0 mx-auto mb-2" style="max-width:
                 17rem;">
                     <div class="card-header h4 text-center">Bootstrap</div>
                     <div class="card-body">
-                        <h4 class="card-title">Primary card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h4 class="card-title">SoftWare University</h4>
+                        <p class="card-text">My Bootstrap experience is not a-lot, but with the learned so far I think
+                            that it should not be a problem to become good at it with more practising.</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +139,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -195,7 +197,7 @@
                     <h5 class="mb-0">
                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
                                 aria-expanded="true" aria-controls="collapseOne">
-                            Budget Planner (React SPA App)
+                            Cashier Project
                         </button>
                     </h5>
                 </div>
@@ -203,13 +205,12 @@
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                      data-parent="#accordionExample">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
-                        of them accusamus labore sustainable VHS.
+                        Cashier is a very simple JavaScript SPA application using Sammy.js routing library and Kinvey as
+                        database. It include Login/Logout and Register functionalities as well as making cashier
+                        calculations simulating real experience.
+                        <a href="#projects"
+                           onclick="window.open('https://github.com/nikiqta/JsApp-Cashier', '_blank')">Cashier
+                            Github</a>
                     </div>
                 </div>
             </div>
@@ -224,13 +225,10 @@
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
-                        of them accusamus labore sustainable VHS.
+                        CarTube is a very simple JavaScript SPA application using Sammy.js routing library and Kinvey as
+                        database. It include Login/Logout and Register functionalities as well as making posting,
+                        editing, deleting adds.
+                        <a href="#projects" onclick="window.open('https://github.com/nikiqta/JsApp-CarTube', '_blank')">CarTube Github</a>
                     </div>
                 </div>
             </div>
@@ -239,19 +237,14 @@
                     <h5 class="mb-0">
                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                 data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Cashier Project
+                            Budget Planner (React SPA App)
                         </button>
                     </h5>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
-                        of them accusamus labore sustainable VHS.
+                     I am currently developing a React SPA App with similar functionalities to the above two simple
+                        projects.
                     </div>
                 </div>
             </div>
@@ -304,7 +297,7 @@
         <div class="modal fade" id="prBasic" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
             <div class="modal-dialog text-center">
-                    <img class="h-50 w-75" src="certificates/Programming-Basic.png"/>
+                <img class="h-50 w-75" src="certificates/Programming-Basic.png"/>
             </div>
         </div>
         <div class="modal fade" id="prFund" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
