Making some changes in the experience section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="card-body">
                         <h4 class="card-title">SoftWare University</h4>
                         <p class="card-text">I have learned the basis of HTML in the beginning of
-                            my study in SoftUni. Since then, I am improving my knowledge everyday, aiming to write a
+                            my study at SoftUni. Since then, I am improving my knowledge everyday, aiming to write a
                             well
                             ordered and semantic code.</p>
                     </div>
