--- a/index.html
+++ b/index.html
@@ -344,6 +344,8 @@
         </div>
     </section>
 </main>
-<footer></footer>
+<footer class="bg-primary">
+    <p class="font-weight-bold bg-primary text-center text-white pt-2 pb-2 m-0">Nedelcho Karageorgiev 2018</p>
+</footer>
 </body>
 </html>
