Updating contact info

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             Junior JavaScript Front-End Developer
         </p>
         <hr>
+        <p class="p-0 m-0"><b class="text-primary">Contact number:</b> +359877012349</p>
+        <p><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
         <p>
             Hello, thank you for taking time watching my CV, my name is Nedelcho. I am a student at Software University
             Sofia who seek to join in a team of professionals and taste the real experience of being into programming on
@@ -193,7 +195,8 @@
         <h2 id="projects" class="h2 text-center">PROJECTS</h2>
         <div class="accordion col-10 m-auto" id="accordionExample">
             <div class="card">
-                <div class="card-header" id="headingOne">
+                <div class="card-header" id="headingOne"  data-toggle="collapse" data-target="#collapseOne"
+                     aria-expanded="true" aria-controls="collapseOne">
                     <h5 class="mb-0">
                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
                                 aria-expanded="true" aria-controls="collapseOne">
@@ -215,7 +218,8 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header" id="headingTwo">
+                <div class="card-header" id="headingTwo" data-toggle="collapse"
+                     data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     <h5 class="mb-0">
                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                 data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -233,7 +237,8 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header" id="headingThree">
+                <div class="card-header" id="headingThree" data-toggle="collapse"
+                     data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     <h5 class="mb-0">
                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                 data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
