Some more text updates on the project section

--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                     <div class="card-body">
                         CarTube is a very simple JavaScript SPA application using Sammy.js routing library and Kinvey as
-                        database. It include Login/Logout and Register functionalities as well as making posting,
-                        editing, deleting adds.
+                        database. It include Login/Logout and Register functionalities as well as posting,
+                        editing and deleting adds.
                         <a href="#projects" onclick="window.open('https://github.com/nikiqta/JsApp-CarTube', '_blank')">CarTube Github</a>
                     </div>
                 </div>
