Working on the layout

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </blockquote>
         </div>
     </section>
-    <section class="my-5 mx-auto col-10">
+    <section id="cerf" class="my-5 mx-auto col-10">
         <h2 id="certificates" class="h2 mb-3 text-center">CERTIFICATES</h2>
         <div class="container col-12 w-100 m-auto text-center">
             <img data-toggle="modal" data-target="#prBasic" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
