updating cv certificates

--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@
                 <img class="h-50 w-75" src="certificates/JavaScript-For-Front-End.png"/>
             </div>
         </div>
+        <div class="modal fade" id="jsFrontEnd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/expresJS.png"/>
+            </div>
+        </div>
+        <div class="modal fade" id="jsFrontEnd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog text-center">
+                <img class="h-50 w-75" src="certificates/reactJS.png"/>
+            </div>
+        </div>
     </section>
 </main>
 <footer class="bg-primary">
