--- a/index.html
+++ b/index.html
@@ -137,20 +137,47 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                JS-React
-            </h4>
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
-            </div>
-        </div>
-        <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
                 JavaScript Front-End Development
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                React-js
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Webpack Bundling
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                YUP and Joi Validations
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Material-UI
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -159,7 +186,16 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Typescript
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -168,7 +204,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -177,7 +213,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -186,7 +222,34 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Node-js
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Express-js
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Payment Integrations with Node.js (Borica, Epay, Halkbank)
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
     </section>
