--- a/index.html
+++ b/index.html
@@ -252,6 +252,24 @@
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Database T-SQL
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Database Mongo-DB
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+            </div>
+        </div>
     </section>
     <!--Projects-->
     <section id="projectSec" class="pb-5 mb-5">
