--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 JavaScript Front-End Development
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
@@ -158,7 +158,7 @@
                 Webpack Bundling
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
@@ -167,7 +167,7 @@
                 YUP and Joi Validations
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
@@ -176,7 +176,7 @@
                 Material-UI
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
@@ -185,7 +185,7 @@
                 JavaScript OOP ES6
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
@@ -194,7 +194,7 @@
                 Typescript
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
             </div>
         </div>
@@ -203,7 +203,7 @@
                 HTML
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
@@ -230,7 +230,7 @@
                 Node-js
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
@@ -239,7 +239,7 @@
                 Express-js
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
@@ -248,7 +248,7 @@
                 Payment Integrations with Node.js (Borica, Epay, Halkbank)
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
@@ -257,7 +257,7 @@
                 Database T-SQL
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
             </div>
         </div>
@@ -266,7 +266,7 @@
                 Database Mongo-DB
             </h4>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
             </div>
         </div>
