updating cv skills

--- a/index.html
+++ b/index.html
@@ -379,6 +379,12 @@
             <img data-toggle="modal" data-target="#jsFrontEnd" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/JavaScript-For-Front-End.png" alt="JavaScript-For-Front-End"/>
         </div>
+        <div class="container col-12 w-100 m-auto text-center">
+            <img data-toggle="modal" data-target="#jsExpress" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
+                 src="certificates/expressJS.jpg" alt="expressJS"/>
+            <img data-toggle="modal" data-target="#jsReact" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
+                 src="certificates/reactJS.jpg" alt="reactJS"/>
+        </div>
 
         <div class="modal fade" id="prBasic" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
@@ -428,13 +434,13 @@
                 <img class="h-50 w-75" src="certificates/JavaScript-For-Front-End.png"/>
             </div>
         </div>
-        <div class="modal fade" id="jsFrontEnd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        <div class="modal fade" id="jsExpress" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog text-center">
                 <img class="h-50 w-75" src="certificates/expresJS.png"/>
             </div>
         </div>
-        <div class="modal fade" id="jsFrontEnd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        <div class="modal fade" id="jsReact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog text-center">
                 <img class="h-50 w-75" src="certificates/reactJS.png"/>
@@ -443,7 +449,7 @@
     </section>
 </main>
 <footer class="bg-primary">
-    <p class="font-weight-bold bg-primary text-center text-white pt-2 pb-2 m-0">Nedelcho Karageorgiev 2018</p>
+    <p class="font-weight-bold bg-primary text-center text-white pt-2 pb-2 m-0">Nedelcho Karageorgiev 2023</p>
 </footer>
 </body>
 </html>
