updating cv skills

--- a/index.html
+++ b/index.html
@@ -437,13 +437,13 @@
         <div class="modal fade" id="jsExpress" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog text-center">
-                <img class="h-50 w-75" src="certificates/expresJS.png"/>
+                <img class="h-50 w-75" src="certificates/expressJS.jpg"/>
             </div>
         </div>
         <div class="modal fade" id="jsReact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog text-center">
-                <img class="h-50 w-75" src="certificates/reactJS.png"/>
+                <img class="h-50 w-75" src="certificates/reactJS.jpg"/>
             </div>
         </div>
     </section>
