updating cv skills

--- a/index.html
+++ b/index.html
@@ -81,60 +81,9 @@
             learning from one of the best lecturers in the country.
         </p>
     </section>
-    <!--Experience-->
-    <section class="m-auto">
-        <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
-        <div class="container col-12 m-auto">
-            <div class="container m-auto col-10 row">
-                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2"
-                     style="max-width:
-                17rem;">
-                    <div class="card-header h4 text-center">JavaScript</div>
-                    <div class="card-body">
-                        <h4 class="card-title">SoftWare University</h4>
-                        <p class="card-text">After hundreds of exercises written on JavaScript I can truly say that, JS
-                            is the programming language which inspires me to go deeply into the web development. Up to
-                            now, I become familiar with many programming patterns and libraries as: JQuery, Sammy.js,
-                            Babel, AJAX, asynchronous programming, promises, creating simple SPA Application using
-                            routing libraries and so on.</p>
-                    </div>
-                </div>
-                <div class="card text-white border-success bg-success p-0 mx-auto mb-2"
-                     style="max-width: 17rem;">
-                    <div class="card-header h4 text-center">HTML-5</div>
-                    <div class="card-body">
-                        <h4 class="card-title">SoftWare University</h4>
-                        <p class="card-text">I have learned the basis of HTML in the beginning of
-                            my study at SoftUni. Since then, I am improving my knowledge everyday, aiming to write a
-                            well
-                            ordered and semantic code.</p>
-                    </div>
-                </div>
-                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:
-                17rem;">
-                    <div class="card-header h4 text-center">CSS-3</div>
-                    <div class="card-body">
-                        <h4 class="card-title">SoftWare University</h4>
-                        <p class="card-text">CSS has enormous potential. I have developed my skills in a way which gives
-                            me the opportunity to use it freely for making the layout of the web pages looking well and
-                            elegant.</p>
-                    </div>
-                </div>
-                <div class="card text-white border-success bg-success p-0 mx-auto mb-2" style="max-width:
-                17rem;">
-                    <div class="card-header h4 text-center">Bootstrap</div>
-                    <div class="card-body">
-                        <h4 class="card-title">SoftWare University</h4>
-                        <p class="card-text">My Bootstrap experience is not a-lot, but with the learned so far I think
-                            that it should not be a problem to become good at it with more practising.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <!--Skills-->
     <section class="mx-auto my-5">
-        <h2 id="skills" class="h2 text-center">SKILLS</h2>
+        <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
                 JavaScript Front-End Development
@@ -268,6 +217,27 @@
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
                      aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+            </div>
+        </div>
+    </section>
+    <!--Experience-->
+    <section class="m-auto">
+        <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
+        <div class="container col-12 m-auto">
+            <div class="container m-auto col-10 row">
+                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2"
+                        style="max-width:
+                17rem;">
+                    <div class="card-header h4 text-center">11/2018 to Current</div>
+                    <div class="card-body">
+                        <h4 class="card-title">Software Group BG AD</h4>
+                        <p class="card-text">After hundreds of exercises written on JavaScript I can truly say that, JS
+                            is the programming language which inspires me to go deeply into the web development. Up to
+                            now, I become familiar with many programming patterns and libraries as: JQuery, Sammy.js,
+                            Babel, AJAX, asynchronous programming, promises, creating simple SPA Application using
+                            routing libraries and so on.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
