--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
     <!--Skills-->
     <section class="mx-auto my-5">
-        <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
+        <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
                 JavaScript Front-End Development
