--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             learning from one of the best lecturers in the country.
         </p>
     </section>
+    <!--Specialties-->
+    <section class="mx-auto my-5">
+        <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
+    </section>
     <!--Experience-->
     <section class="m-auto">
         <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
@@ -111,7 +115,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -120,7 +124,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -129,7 +133,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -138,7 +142,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -147,7 +151,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -156,7 +160,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -165,7 +169,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -174,7 +178,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -183,7 +187,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -192,7 +196,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -201,7 +205,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -210,7 +214,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -219,7 +223,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -228,7 +232,7 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
@@ -237,11 +241,11 @@
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
-                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
             </div>
         </div>
     </section>
-    <!--Projects-->
+    <!-- Projects
     <section id="projectSec" class="pb-5 mb-5">
         <h2 id="projects" class="h2 text-center">PROJECTS</h2>
         <div class="accordion col-10 m-auto" id="accordionExample">
@@ -305,7 +309,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--Education-->
     <section>
         <h2 id="education" class="h2 mb-3 text-center">EDUCATION</h2>
